Fixed video container expanding too much horizontally

--- a/public/landingPage.css
+++ b/public/landingPage.css
@@ -40,28 +40,32 @@ body, html {
 @media only screen and (min-width: 769px), (hover: hover) and (pointer: fine) {
     .mobile-content {
         display: none;
-    }
-    
-    .desktop-content {
+      }
+      .desktop-content {
         display: block;
-    }
+      }
 
-    #instructions {
+      #instructions {
         flex-direction: row;
-    }
+      }
 
-    #ia-demo-container {
-        height: 499px;
+      #instructions-1 {
+        max-width: 350px;
+      }
+    
+      #ia-demo-container {
+        width: 100%;
+        max-width: none;
         border-radius: 12px;
-        box-shadow: 3px 6px 7px #D0B49F;
-        background-color: #D0B49F; 
-        border: 1px solid #D0B49F;
-    }
+        box-shadow: 3px 5px 7px #D0B49F;
+        background-color: #D0B49F;
+      }
     
-    #ia-demo {
-        width: 500px;
-    }
-    
+      #ia-demo {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
 }
 
 #landing-page {
@@ -170,6 +174,7 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 350px;
 }
 
 .arrow-row {
